tests/trybuild/execute-entrypoint.stderr
error[E0624]: method `execute` is private
 --> tests/trybuild/execute-entrypoint.rs:6:77
  |
6 |     let _response: Result<RestResponse, shared_restapi::RestError> = client.execute(
  |                                                                             ^^^^^^^ private method
  |
 ::: src/adapter.rs
  |
  |     async fn execute(&self, request: RestRequest) -> RestResult<RestResponse> {
  |     ------------------------------------------------------------------------- private method defined here
